--- a/test.html
+++ b/test.html
@@ -42,104 +42,54 @@
         }
         function pageEvents(ev) {
             var ekey = ev.which;
+            var scale = Math.abs((120000)/(120000+zadd));
             if (ekey == 97) {
                 xdeg += 1/36;
-                yaxis = yaxis.rotatex(1/36);
-                zaxis = zaxis.rotatex(1/36);
             }
             if (ekey == 113) {
                 xdeg -= 1/36;
-                yaxis = yaxis.rotatex(-1/36);
-                zaxis = zaxis.rotatex(-1/36);
             }
             if (ekey == 100) {
                 zdeg += 1/36;
-                xaxis = xaxis.rotatez(1/36);
-                yaxis = yaxis.rotatez(1/36);
             }
             if (ekey == 101) {
                 zdeg -= 1/36;
-                xaxis = xaxis.rotatez(-1/36);
-                yaxis = yaxis.rotatez(-1/36);
             }
             if (ekey == 115) {
                 ydeg += 1/36;
-                xaxis = xaxis.rotatey(1/36);
-                zaxis = zaxis.rotatey(1/36);
             }
             if (ekey == 119) {
                 ydeg -= 1/36;
-                xaxis = xaxis.rotatey(-1/36);
-                zaxis = zaxis.rotatez(-1/36);
-            }
-            var axes = xaxis.add(yaxis).add(zaxis);
-            if (axes[0] < xmin) {xmin = axes[0];}
-            if (axes[0] > xmax) {xmax = axes[0];}
-            if (axes[1] < ymin) {ymin = axes[1];}
-            if (axes[1] > ymax) {ymax = axes[1];}
-            if (axes[2] < zmin) {zmin = axes[2];}
-            if (axes[2] > zmax) {zmax = axes[2];}
-            if (ekey == 102) {
-                //zadd += 10000;
-                zadd += 10000;
-                /*
-                var arr = [0,0,10];
-                arr = arr.rotatex(xdeg).rotatey(ydeg);
-                for (var i = bodies.length; i--;) {
-                    bodies[i][0] = bodies[i][0].add(arr);
-                }
-                */
-            }
-            if (ekey == 114) {
-                //zadd -= 10000;
-                zadd -= 10000;
-                /*
-                var arr = [0,0,-10];
-                arr = arr.rotatex(xdeg).rotatey(ydeg);
-                for (var i = bodies.length; i--;) {
-                    bodies[i][0] = bodies[i][0].add(arr);
-                }
-                */
             }
             if (ekey == 103) {
-                yadd += 10000;
-                /*
-                var arr = [0,10,0];
-                arr = arr.rotatex(xdeg).rotatez(zdeg);
-                for (var i = bodies.length; i--;) {
-                    bodies[i][0] = bodies[i][0].add(arr);
-                }
-                */
+                //yadd += 10000;
+                yadd += (1200 / scale) * 1/30;
             }
             if (ekey == 116) {
-                yadd -= 10000;
-                /*
-                var arr = [0, -10, 0];
-                arr = arr.rotatex(xdeg).rotatez(zdeg);
-                for (var i = bodies.length; i--;) {
-                    bodies[i][0] = bodies[i][0].add(arr);
-                }
-                */
+                //yadd -= 10000;
+                yadd -= (1200 / scale) * 1/30;
             }
             if (ekey == 104) {
-                xadd += 10000;
-                /*
-                var arr = [10, 0, 0];
-                arr = arr.rotatey(ydeg).rotatez(zdeg);
-                for (var i = bodies.length; i--;) {
-                    bodies[i][0] = bodies[i][0].add(arr);
-                }
-                */
+                //xadd += 10000;
+                xadd += (1300 / scale) * 1/30;
             }
             if (ekey == 121) {
-                xadd -= 10000;
-                /*
-                var arr = [-10, 0, 0];
-                arr = arr.rotatey(ydeg).rotatez(zdeg);
-                for (var i = bodies.length; i--;) {
-                    bodies[i][0] = bodies[i][0].add(arr);
+                //xadd -= 10000;
+                xadd -= (1300 / scale) * 1/30;
+            }
+            if (ekey == 102) {
+                var add = .10*zadd;
+                if (add < 1000) {
+                    add = 1000;
                 }
-                */
+                zadd += add;
+            }
+            if (ekey == 114) {
+                var add = .10*zadd;
+                if (add < 1000) {
+                    add = 1000;
+                }
+                zadd -= add;
             }
             if (ekey == 112) {
                 pause = !pause;
@@ -153,22 +103,12 @@
             primary = document.getElementById('primary').getContext('2d');
             primary.fillStyle = '#000';
             primary.fillRect(0, 0, 1300, 1200);
-            origin = [400, 400, 0];
-            zadd = 1000000;
+            zadd = 10000000;
             xadd = 0;
             yadd = 0;
             xdeg = 0;
             ydeg = 0;
             zdeg = 0;
-            xmax = 0;
-            xmin = 0;
-            ymin = 0;
-            ymax = 0;
-            zmin = 0;
-            zmax = 0;
-            xaxis = [1, 0, 0];
-            yaxis = [0, 1, 0];
-            zaxis = [0, 0, 1];
             bodies = [];
             for (var i = 50; i--;) {
                 //bodies[i] = {0:[-300 + randInt(300), -300 + randInt(300), -100 + randInt(100)], c:'rgb(' + (125 + randInt(125)) + ',' + (125 + randInt(125)) + ',' + (125 + randInt(125)) + ')', np:[], scale:0, i:i};
@@ -184,11 +124,7 @@
         function drawBodies(primary, dotime) {
             primary.fillStyle = '#000';
             primary.fillRect(0,0,1300,1200);
-            var position2, position1;
             // 3D accomplished with assistance from AlteredQualia, 3D effect inspired by CanvasMol
-            var xx = xaxis.dot(xaxis);
-            var yy = yaxis.dot(yaxis);
-            var zz = zaxis.dot(zaxis);
             for (var i = bodies.length; i--;) {
                 var position = bodies[i][0];
                 var xd = position[0];
@@ -206,7 +142,7 @@
                 //var position = bodies[i][0].multiplyEach(xaxis).multiplyEach(yaxis).multiplyEach(zaxis);
                 //var position = bodies[i][0].transformAxes(xaxis, yaxis, zaxis);
                 //position = xaxis.multiply((position.dot(xaxis)) / xx).add(yaxis.multiply((position.dot(yaxis)) / yy)).add(zaxis.multiply((position.dot(zaxis)) / zz));
-                var scale = (120000+position[2]/*+zadd*/)/100000;
+                var scale = (120000)/(120000+position[2]);
                 bodies[i].np = position;
                 bodies[i].scale = scale;
             }
@@ -215,9 +151,9 @@
                 var position = bodies[i].np;
                 var scale = bodies[i].scale;
                 if (scale > 0) {
-                    position = position.scale(scale);
-                    var radius = 1000/scale;
-                    var grad = primary.createRadialGradient(position[0]+600, position[1]+300, 0.1*radius/scale, position[0]+600, position[1]+300, radius);
+                    position = position.multiply(scale);
+                    var radius = 1000*scale;
+                    var grad = primary.createRadialGradient(position[0]+600, position[1]+300, 0.1*radius*scale, position[0]+600, position[1]+300, radius);
                     grad.addColorStop(0, bodies[i].c);
                     grad.addColorStop(0.95, 'rgba(0,0,0,1.0)');
                     grad.addColorStop(1, 'rgba(0,0,0,0.0)');
@@ -226,8 +162,6 @@
             }
             if (!dotime && !pause) {
                 zdeg += 1/36;
-                xaxis = xaxis.rotatez(1/36);
-                yaxis = yaxis.rotatez(1/36);
                 setTimeout(function() {drawBodies(primary);}, 64);
             }
         }
