added system with parameters from kepler 16-b

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
         <br />
         <select id='choosebody' style='width: 100px; background-color:#000; color:#fff; border:0 none;'>
             <option value='0'>Solar System</option>
+            <option value='9'>Kepler 16 System</option>
             <option value='1'>Two-Body System</option>
-	    <option value='21'>Sun-Jupiter System</option>
+	        <option value='21'>Sun-Jupiter System</option>
             <option value='2'>Four-Body System</option>
             <option value='3'>Gliese 876 System</option>
             <option value='4'>55 Cancri System</option>
